fix spacing for main and side code blocks

--- a/src/app.scss
+++ b/src/app.scss
@@ -40,7 +40,8 @@
     clear: left;
   }
 
-  pre + pre {
+  pre:not(._) + pre:not(._),
+  pre._ + pre._{
     padding-top: 0;
   }
 
